--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "npm": "^6.4.1",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.3",
     "rxjs": "^6.0.0",
